[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/items/scenes/ThunderInst.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/electric.wav" type="AudioStream" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 0, Vector2( 1, 0.2 ), -1.5, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.352201, 0.710692, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.546875, 0.815196, 1, 1, 0.611934, 0.84173, 1, 1, 0.921739, 0.968082, 1, 1 )

[node name="ThunderInst" type="Node2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
width_curve = SubResource( 1 )
gradient = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimerAttack" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0
pitch_scale = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerAttack" to="." method="_on_TimerAttack_timeout"]
